로또 번호 5게임 생성 기능 구현

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>로또 번호 생성기</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <div class="container">
+    <h1>로또 번호 생성기</h1>
+    <p>행운의 번호 5게임을 확인하세요!</p>
+    
+    <div id="lotto-container" class="lotto-container">
+      <!-- 로또 번호 세트가 여기에 생성됩니다 -->
+    </div>
+
+    <button id="generate-btn">번호 생성하기</button>
+  </div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
