초기 번호 숨김 처리 및 다크/라이트 모드 테마 토글 기능 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
+  <div class="theme-toggle">
+    <button id="theme-btn" aria-label="Toggle Theme">🌙</button>
+  </div>
   <div class="container">
     <h1>로또 번호 생성기</h1>
     <p>행운의 번호 5게임을 확인하세요!</p>
